--- a/dog-runs.html
+++ b/dog-runs.html
@@ -94,6 +94,18 @@
 
     <!-- Image Header -->
     <img class="img-fluid rounded mb-4" src="http://placehold.it/1200x300" alt="">
+    <div class="row">
+        <div class="col">
+            <h3 style="font-family: Arial Black; color:dodgerblue">Make nature work for you!</h3>
+        </div>
+    </div>
+    <div class="col">
+        <a>
+            Pests are good at hiding, and sometimes ordinary detective simply doesn't cut it. In these situations, we
+            offer the services of our canine pest trackers, who have natural senses and instinct combined with the training
+            necessary to get the job done.
+        </a>
+    </div>
 
     <div class="row">
         <div class="card-group">
@@ -101,7 +113,7 @@
                 <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Dog 1</a>
+                        <a href="#">Remy</a>
                     </h4>
                     <!--p class="card-text"></p-->
                 </div>
@@ -110,7 +122,7 @@
                 <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Dog 2</a>
+                        <a href="#">Aiden</a>
                     </h4>
                     <!--p class="card-text">Cockroaches live in the kitchens and walls of warm homes, coming out at night to eat any type
                       of food and leaving diseases in their wake.</p-->
@@ -120,7 +132,17 @@
                 <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        <a href="#">Dog 3</a>
+                        <a href="#">Yap</a>
+                    </h4>
+                    <!--p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
+                      They are host to many diseases due to feeding on a wide range of mammals.</p-->
+                </div>
+            </div>
+            <div class="card h-100">
+                <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <a href="#">Striker</a>
                     </h4>
                     <!--p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
                       They are host to many diseases due to feeding on a wide range of mammals.</p-->
@@ -135,9 +157,10 @@
             <div class="card h-100">
                 <h4 class="card-header">How Does It Work?</h4>
                 <div class="card-body">
-                    <p class="card-text">Our rodent removal program utilizes a team of trained rat dogs. These dogs are skilled in
-                        locating rodents using their natural sense of smell and quickly eliminating them. Dogs have been used on farms
-                        to hunt pests since humans began farming, and they've been helping hunt for even longer.</p>
+                    <p class="card-text">Our rodent removal program utilizes a team of trained rat dogs for more advanced infestations.
+                        These dogs are skilled in locating rodents using their natural sense of smell and quickly eliminating them.
+                        Dogs have been used on farms to hunt pests since humans began farming, and they've been helping humans hunt for the past
+                        20,000 years.</p>
                 </div>
                 <div class="card-footer">
                     <a href="#" class="btn btn-primary">Learn More</a>
@@ -149,7 +172,7 @@
                 <h4 class="card-header">Why Do It?</h4>
                 <div class="card-body">
                     <p class="card-text">Using our team of rat dogs is cleaner than poison and more efficient than traps. Instead of leaving traps
-                        and waiting for the infestation to come to us, our dogs take us to the infestation and eliminate it. Using poison can get
+                        and waiting for the infestation to come to us, our dogs take us to the infestation. Using poison can get
                         messy, traps take time to catch pests, and return visits are needed to clean up traps. Dogs find the rats and directly
                         eliminate them without the slow process of trapping over time.</p>
                 </div>
@@ -163,7 +186,7 @@
                 <h4 class="card-header">Is It Humane?</h4>
                 <div class="card-body">
                     <p class="card-text">Our dogs are trained to quickly kill rodents when they have been found. A quick death from our dogs is
-                    painless and more humane than a slow death poisoned in a trap. We know it's ugly business, so we aim to make it as humane as possible.</p>
+                    painless and more humane than a slow death from being poisoned in a trap. We know it's ugly business, so we aim to make it as humane as possible.</p>
                 </div>
                 <div class="card-footer">
                     <a href="#" class="btn btn-primary">Learn More</a>
