--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Trapping
+              Animal Index
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="trapping.html">Info</a>
@@ -138,10 +138,9 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="about.html">About Us</a>
-              <!--a class="dropdown-item" href="mammals.html">Clients</a>
+              <a class="dropdown-item" href="mammals.html">Clients</a>
               <a class="dropdown-item" href="reptiles.html">Veteran Owned</a>
-
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a-->
+              <a class="dropdown-item" href="faq.html">FAQ</a>
             </div>
           </li>
 
@@ -217,9 +216,9 @@
   <div class="container">
     <!----------------------------------------------------------------------!!!!!!!!!!!!!ADD AN AFFIXED BANNER FOR COVID INFO!!!!!!!!!!!!!!!---------------->
     <!-- Call to Action Well -->
-    <div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card text-white bg-primary my-5 py-4 text-center">
       <div class="card-body">
-        <h1>LET OUR FAMILY TAKE CARE OF YOURS</h1>
+        <h1 class="text-tertiary">LET OUR FAMILY TAKE CARE OF YOURS</h1>
         <p class="text-white m-0">Here at Calvert Exterminators, we strive to combine the professional quality of bigger names with the personal feel of local business.</p>
       </div>
     </div>
@@ -264,118 +263,6 @@
 
     <!-- Portfolio Section -->
     <h2>How Can We Help?</h2>
-
-    <!--div class="row">
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="ants.html#carpenter">Flies</a>
-            </h4>
-            <p class="card-text">From houseflies to fruit flies, they can carry many different diseases such as food poisoning bacteria.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Bed Bugs</a>
-            </h4>
-            <p class="card-text">After quickly spreading throughout a home, these parasites will feed on human blood while evading detection within
-            the very beds we sleep upon.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Ants</a>
-            </h4>
-            <p class="card-text">Ants venture into houses in search of food to grow intricate colonies in lawns and warm, dry soil.
-            There are many different species with different treatments necessary.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Wasps</a>
-            </h4>
-            <p class="card-text">Wasps can pest local animals in your yard and harm you with their stings.
-              Nests can be found in wall cavities, trees, bushes, and underground and can contain over 25,000 wasps.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Rats</a>
-            </h4>
-            <p class="card-text">Rats seek warm shelters, such as homes, and spread disease through their droppings while searching for food.
-            They chew through walls and cables, causing structural damage and fire hazards.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Termites</a>
-            </h4>
-            <p class="card-text">Among the most destructive pests in the U.S., Termites cause an average of $7,000 to $8,000 to homes,
-            which is not insured by most house insurance policies.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Mice</a>
-            </h4>
-            <p class="card-text">Smaller than rats, Mice will similarly nest in warm shelters such as walls and closets.
-            Constantly gnawing, they will damage furniture and food packaging while spreading disease in the process.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Cockroaches</a>
-            </h4>
-            <p class="card-text">Cockroaches live in the kitchens and walls of warm homes, coming out at night to eat any type
-            of food and leaving diseases in their wake.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-sm-6 portfolio-item">
-        <div class="card h-100">
-          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
-          <div class="card-body">
-            <h4 class="card-title">
-              <a href="#">Mosquitoes</a>
-            </h4>
-            <p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
-            They are host to many diseases due to feeding on a wide range of mammals.</p>
-          </div>
-        </div>
-      </div>
-    </div-->
-    <!-- /.row -->
-
     <div class="row">
       <div class="card-group">
         <div class="card h-100">
@@ -384,7 +271,7 @@
             <h4 class="card-title">
               <a href="#">Pest Control</a>
             </h4>
-            <p class="card-text">We use the most effective solutions to shut down infestations of all pests native to the Maryland, DC, Virginia area.</p>
+            <p class="card-text">We use the most effective solutions to shut down infestations of all pests native to the Southern Maryland and DC area.</p>
             <a href="trapping.html">More</a>
           </div>
         </div>
@@ -472,19 +359,16 @@
 
   </div>
 
+
   <div class="container">
-    <div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card text-white bg-primary my-5 py-4 text-center">
       <div class="card-body">
-        <h1>Testimonials</h1>
-        <p class="text-white m-0">Keep up to date on our services through our Facebook, Instagram, and Twitter pages!</p>
+        <h1 class="text-tertiary">Testimonials</h1>
+        <p class="text-white m-0">Reviews from our clients!</p>
       </div>
     </div>
     <!-- TESTIMONIALS -->
     <div class="row">
-      <!--div class="col">
-        <img src="Willie.jpg" alt="Avatar" class="avatar">
-      </div-->
-
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
         <!--Card-->
@@ -548,13 +432,162 @@
         <!--Card-->
       </div>
       <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+        <!--Card-->
+        <div class="card testimonial-card">
+          <!--Background color-->
+          <!--div class="card-up blue-gradient">
+          </div-->
+          <!--Avatar-->
+          <div class="avatar mx-auto white">
+            <img src="dennis.jpg" alt="Avatar" class="avatar">
+          </div>
+          <div class="card-body">
+            <!--Name-->
+            <h4 class="font-weight-bold mb-4">The Golden God</h4>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <hr>
+            <!--Quotation-->
+            <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
+              </i>Mm. I have contained my rage for as long as possible, but I shall unleash my fury upon you like the crashing of a thousand waves! Begone, vile man! Begone from me! A starter car? This car is a finisher car! A transporter of gods! The golden god! I am untethered, and my rage knows no bounds! </p>
+          </div>
+        </div>
+        <!--Card-->
+      </div>
+      <!--Grid column-->
     </div>
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary feedback-affixed" data-toggle="modal" data-target="#exampleModal">
+      <span><i class="text-white fa fa-comment"></i></span>
+      Feedback
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Feedback</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <!-- Modal body -->
+          <div class="modal-body">
+            <form name="sentMessage" id="feedbackForm" novalidate>
+              <div class="row">
+                <div class="col-6 col-md-4">
+                  <div class="control-group form-group">
+                    <div class="controls">
+                      <label><span class="input-group-addon"><i class="fa fa-envelope"></i></span> Email Address (optional):</label>
+                      <input type="email" class="form-control" id="email" placeholder="example@example.com">
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- /row 1 -->
+
+              <span class="input-group-addon"><i class="fa fa-commenting"></i></span>
+              <label>How would you rate your experience?</label>
+              <!-- Feedback form -->
+              <div class="container-fluid" style="background: dodgerblue">
+                <div class="row">
+                  <div class="col-6 col-md-4">
+                    <div class="btn-group" role="group" aria-label="Feedback" id="feedback" required data-validation-required-message="Please enter your service info.">
+                      <button type="button" class="btn btn-feedback" id="star-1"><i class="fa fa-star"></i></button>
+                      <button type="button" class="btn btn-feedback" id="star-2"><i class="fa fa-star"></i></button>
+                      <button type="button" class="btn btn-feedback" id="star-3"><i class="fa fa-star"></i></button>
+                      <button type="button" class="btn btn-feedback" id="star-4"><i class="fa fa-star"></i></button>
+                      <button type="button" class="btn btn-feedback" id="star-5"><i class="fa fa-star"></i></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="control-group form-group">
+                <div class="controls">
+                  <label>Additional notes:</label>
+                  <textarea rows="10" cols="100" class="form-control" id="feedbackMessage" maxlength="999" style="resize:none"></textarea>
+                </div>
+              </div>
+
+              <div class="control-group form-group">
+                <div class="controls">
+                  <input type="checkbox" class="form-check-input" id="confirmation" required data-validation-required-message="We require your consent to contact you further.">
+                  <label class="form-check-label" for="confirmation" style="font-family: Arial Black; color:black">Yes, Calvert Exterminators may contact me</label>
+                </div>
+                <a>
+                  By submitting this request, I validate that I am 18 years of age or older. Additionally, I give Calvert Exterminators permission to call or text me at the number provided regarding
+                  Calvert Exterminators services using automated technology.
+                  I understand my consent is not a condition of purchase.
+                  Commercial customer? Call (410) 535-8661
+                </a>
+              </div>
+
+              <!-- For success/fail messages -->
+              <!--div id="success"></div-->
+              <!--button type="submit" class="btn btn-primary" id="sendMessageButton">Submit</button-->
+              <script>
+                // Add active class to the current button (highlight it)
+                var header = document.getElementById("feedback");
+                var btns = header.getElementsByClassName("btn btn-feedback");
+                console.log("btns length:"+btns.length);
+                for (var i = 0; i < btns.length; i++) {
+                  console.log(i)
+                  btns[i].addEventListener("click", function() {
+                    var current=this;
+                    console.log("current:"+current.id);
+                    var inactive = document.getElementsByClassName("btn btn-feedback");
+                    var active = document.getElementsByClassName("btn btn-feedback active");
+
+                    console.log("inactive length:"+inactive.length);
+                    console.log("active length:"+active.length);
+
+                    var rating = this.id.charAt(this.id.length-1);
+
+                    console.log("rating:"+rating);
+
+                    for(var i = 0; i < inactive.length; i++) {
+
+                      if (i < rating) {
+                        inactive[i].className = "btn btn-feedback active";
+                      } else {
+                        inactive[i].className = "btn btn-feedback";
+                      }
+                      console.log(i);
+                      console.log(inactive[i].id + ":" +inactive[i].className);
+                    }
+                  });
+                }
+              </script>
+              <button type="submit" class="btn btn-primary d-none" id="sendFeedbackButton">Submit</button>
+            </form>
+          </div>
+          <!-- ./Modal body -->
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <!-- For success/fail messages -->
+            <div id="success"></div>
+            <button type="button" class="btn btn-primary feedback-submit">Send message</button>
+            <!--button type="submit" class="btn btn-primary sendMessageButton" id="sendMessageButton">Submit</button-->
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="container">
-    <div class="card text-white bg-secondary my-5 py-4 text-center">
+    <div class="card text-white bg-primary my-5 py-4 text-center">
       <div class="card-body">
-        <h1>Additional Information</h1>
+        <h1 class="text-tertiary">Additional Information</h1>
         <p class="text-white m-0">Keep up to date on our services through our Facebook, Instagram, and Twitter pages!</p>
       </div>
     </div>
@@ -582,7 +615,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Calvert Exterminators 2020</p>
     </div>
     <!-- /.container -->
   </footer>
@@ -591,6 +624,10 @@
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Contact form JavaScript -->
+  <!-- Do not edit these files! In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 </body>
 
 </html>
