--- a/mammals.html
+++ b/mammals.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Flies</title>
+    <title>Mammals</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -84,8 +84,8 @@
 <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Pest Index
-        <small>Flies</small>
+    <h1 class="mt-4 mb-3">Animal Index
+        <small>Mammals</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -103,16 +103,30 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3 id="carpenter">Bats</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Bats</h3>
             <p>With ten species in Maryland, bats can live in MD all year long while other migrate here in the spring and fall.
                 They live and hunt nocturnally in large colonies or small families. Young bats can occasionally enter houses
                 and will explore for a way out. Bats can be known to carry diseases such as rabies and histoplasmosis.
             </p>
-            <h4>Treatment</h4>
-            <p>Our skilled team will locate the bat and diagnose the most effective trap for the situation.</p>
-            <!--a class="btn btn-primary" href="contact.html/service-type=Bat">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a-->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+        <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">Characteristics</h3>
+        <ul>
+            <li>Brown</li>
+            <li>2 in. size, oval in shape</li>
+        </ul>
+        </div>
+        <div>
+        <h3 class="my-3" style="font-family: Arial Black; color:dodgerblue">Diseases</h3>
+        <ul>
+            <li>Salmonellosis</li>
+            <li>Typhoid Fever</li>
+            <li>Cholera</li>
+            <li>Dysentery</li>
+            <li><a href="https://www.ecolab.com/pages/diseases-spread-by-cockroaches">More</a></li>
+        </ul>
         </div>
     </div>
     <!-- /.row -->
@@ -127,7 +141,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Beavers</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Beavers</h3>
             <p>Beavers are among the largest rodents in North America and if left untreated will cut down over 200 trees per year.
             Living near the water, they will cut down trees to dam up streams and rivers to create ponds for food.</p>
             <h4>Treatment</h4>
@@ -149,7 +163,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Coyotes</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Coyotes</h3>
             <p>Resembling small German Shephard dogs, coyotes have begun to appear in Western Maryland as early as 1972 and have boomed since then.
             Coyotes prey on pets and roaming strays in suburban areas and livestock in rural areas. Rapid decline of free roaming animals is a common sign of coyotes.</p>
             <h4>Treatment</h4>
@@ -172,7 +186,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Foxes</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Foxes</h3>
             <p>With two species in Maryland, red and gray, foxes resemble small dogs and are a threat to livestock and pets.
             Some foxes have been known to carry rabies.</p>
             <h4>Treatment</h4>
@@ -195,16 +209,13 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Opossums</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Opossums</h3>
             <p>Oppossums are marsupials with grayish white fur that covers all but their ears and tail, which is long and scaly.
                 They are abundant in Maryland and prefer woods near water and urban and suburban environments.
                 They are effective in lowering the tick population.
                 They are commonly aggressive scavengers and carry disease.</p>
             <h4>Treatment</h4>
             <p>Our team will use the most effective process to safely trap and relocate opossums away from your property.</p>
-            <a class="btn btn-primary" href="#">View Project
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
         </div>
     </div>
     <!-- /.row -->
@@ -220,7 +231,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Raccoons</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Raccoons</h3>
             <p>Raccoons are abundant in Maryland, with short legs, a striped tail, grayish black fur, and a telltale black "mask" around their eyes.
             They are a nuissance to animals and humans, well adapted to urban and suburban areas. They will enter homes, basements, attics, and other structures in search of food.
             Raccoons cause over 60% of rabies cases in Maryland and can cause canine distemper and parvovirus in domestic dogs.</p>
@@ -244,7 +255,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Skunks</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Skunks</h3>
             <p>Eastern striped skunks are common in the U.S. and are identified easily by their black fur with two white stripes going down their back.
             When threatened, skunks will either flee or stand their ground, stomping their front two legs as a warning.
             If they continue to feel threatened, they will spray butyl mercaptan, a foul smelling liquid, from their backside at their aggressor.
@@ -269,7 +280,7 @@
             </a>
         </div>
         <div class="col-md-5">
-            <h3>Squirrels</h3>
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">Squirrels</h3>
             <p>With four species in Maryland being gray, red, flying, and fox, squirrels nest in trees and can be an annoyance in their chattering and barking.
                 Most squirrels in urban areas are rather tame, yet have been know to nest in warm household rooms, such as attics, to escape the cold.
                 Once they have nested in a home, squirrels will chew through insulation and wiring to create fire hazards. They can also infrequently transmit rabies.
