--- a/pest-control.html
+++ b/pest-control.html
@@ -119,11 +119,14 @@
             <div id="div1" name="info" style="display:none">
                 <h5>Inspection</h5>
                 A Calvert specialist will perform a thorough examination of your home by checking your basement or crawlspace for moisture, your foundation for wood debris,
-                and other risk areas that may attract an infestation. Orkin utilizes state-of-the-art equipment such as IR thermometers, moisture meters, and termite
-                detection systems to help him scientifically assess your home. When we are done, you will receive our recommendation, complete with customized digital diagrams
-                and an Orkin Inspection Report outlining problems we identified, as well as recommended plan to protect your home from termites.
+                and other risk areas that may attract an infestation. Calvert Exterminators utilizes tried-and-true detection methods along with a keen eye for even the most
+                minute details in order to fully assess the level of infestation. Upon completing the initial sweep, we will recommend a service method along with a personalized
+                price tag, just for you.
             </div>
             <div id="div2" name="info" style="display:none">
+                If Calvert Exterminators locates an ongoing or potential infestation, we will recommend the best solution for your situation.
+
+
                 If Orkin finds a termite infestation or the potential for one, he will discuss the best solution for your situation.
                 <h5>Termidor® Liquid Treatment</h5>
 
@@ -135,9 +138,9 @@
                 Sentricon® targets at-risk locations around your home such as, old tree stumps, moist soil, irrigation sprinkler heads, roof downspouts and other moist areas.
             </div>
             <div id="div3" name="info" style="display:none">
-                <h5>Inspection</h5>
-                After your treatment, your Orkin Specialist will implement a Continuous Termite Protection Plan to monitor and help protect your home for any future signs of termite activity.
-                Your plan will also include a Re-treatment Program. That way, in the unlikely event that termites invade your home following our visit, Orkin will also return to battle the problem at no additional charge.
+                After the initial treatment, your Calvert Exterminator will establish a recurring protection plan to monitor and protect your property for any future infestations.
+                Our ongoing protection involves monthly visits, during which we ensure that the unlikely has not come to pass, and no new infestations have begun to take root.
+
             </div>
 
             <script>
