--- a/reptiles.html
+++ b/reptiles.html
@@ -84,15 +84,15 @@
 <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Pest Index
-        <small>Flies</small>
+    <h1 class="mt-4 mb-3">Animal Index
+        <small>Reptiles</small>
     </h1>
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
             <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Mammals</li>
+        <li class="breadcrumb-item active">Reptiles</li>
     </ol>
 
     <!-- Project One -->
